--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -26,12 +26,22 @@ jobs:
         run: npm install @microsoft/eslint-formatter-sarif --save-dev
 
       - name: Run ESLint with SARIF output
-        run: npx eslint . --format @microsoft/eslint-formatter-sarif --output-file reports/eslint-results.sarif || true
+        run: |
+          npx eslint . \
+            --ext .js,.mjs \
+            --format @microsoft/eslint-formatter-sarif \
+            --output-file reports/eslint-results.sarif
 
       - name: Debug ESLint Output
-        run: cat reports/eslint-results.sarif || echo "No SARIF report generated"
+        run: |
+          if [ -f reports/eslint-results.sarif ]; then
+            cat reports/eslint-results.sarif
+          else
+            echo "❌ No SARIF report generated"
+            exit 1
+          fi
 
       - name: Upload SARIF report
-        uses: github/codeql-action/upload-sarif@v4
+        uses: github/codeql-action/upload-sarif@v3
         with:
           sarif_file: reports/eslint-results.sarif
