Added eslint yml in workflows

--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -2,6 +2,10 @@ name: ESLint Code Analysis
 
 on: [push, pull_request]
 
+permissions:
+  contents: read          # keep the defaults you need
+  security-events: write  # <-- allow uploading SARIF
+
 jobs:
   eslint:
     runs-on: ubuntu-latest
