--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -30,13 +30,7 @@ jobs:
         run: npm install @microsoft/eslint-formatter-sarif --save-dev
 
       - name: Run ESLint with SARIF output
-        run: |
-          npx eslint "**/*.{js,mjs,cjs,jsx}" \
-            --config ./eslint.config.js \
-            --ext .js,.mjs,.cjs,.jsx \
-            --format @microsoft/eslint-formatter-sarif \
-            --output-file reports/eslint-results.sarif \
-            || true
+        run: npx eslint . --format @microsoft/eslint-formatter-sarif --output-file reports/eslint-results.sarif || true
 
 
       - name: Debug SARIF file
