--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -33,16 +33,8 @@ jobs:
         run: npx eslint . --format @microsoft/eslint-formatter-sarif --output-file reports/eslint-results.sarif || true
 
 
-      - name: Debug SARIF file
-        run: |
-          ls -R .
-          ls -R reports || echo "(no such directory)"
-          if [ -f reports/eslint-results.sarif ]; then
-            echo "✅ SARIF generated:"
-          else
-            echo "❌ reports/eslint-results.sarif not found"
-            exit 1
-          fi
+      - name: Debug ESLint Output
+        run: cat reports/eslint-results.sarif || echo "No SARIF report generated"s
 
       - name: Upload SARIF report
         uses: github/codeql-action/upload-sarif@v3
