--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -2,32 +2,36 @@ name: SonarQube Analysis
 
 on:
   push:
-    branches: 
+    branches:
       - main
   pull_request:
-    branches: 
+    branches:
       - main
+  workflow_dispatch:                # so you can trigger manually
 
 jobs:
-  sonar:
-    runs-on: [self-hosted]      # must match your self-hosted runner label
-    env:
-      SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
-      SONAR_TOKEN:    ${{ secrets.SONAR_TOKEN }}
+  sonarqube:
+    name: Analyze with SonarQube
+    runs-on: [self-hosted, windows]  # ← point at your Windows self‑hosted runner
+
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0             # gives Sonar full history for coverage, etc.
 
-      - name: Install SonarScanner
-        run: |
-          curl -sSL -o scanner.zip \
-            https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-7.1.0.4889-linux.zip
-          unzip scanner.zip -d $RUNNER_TEMP
-          echo "$RUNNER_TEMP/sonar-scanner-*/bin" >> $GITHUB_PATH
+      - name: Set up Java 17
+        uses: actions/setup-java@v3
+        with:
+          distribution: temurin
+          java-version: '17'
 
-      - name: Run SonarQube analysis
-        run: |
-          sonar-scanner \
-            -Dsonar.projectKey=your-project-key \
-            -Dsonar.sources=. \
-            -Dsonar.host.url=$SONAR_HOST_URL \
-            -Dsonar.login=$SONAR_TOKEN
+      - name: SonarQube Scan
+        uses: SonarSource/sonarqube-scan-action@v4.1.0
+        env:
+          SONAR_TOKEN:    ${{ secrets.SONAR_TOKEN }}
+          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}   # should be http://localhost:9000
+        with:
+          args: >
+            -Dsonar.projectKey=your-project-key
+            -Dsonar.sources=.
