--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -2,23 +2,17 @@ name: SonarQube Analysis
 
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
   pull_request:
-    branches:
-      - main
-  workflow_dispatch:                # so you can trigger manually
+    branches: [ main ]
+  workflow_dispatch:
 
 jobs:
   sonarqube:
-    name: Analyze with SonarQube
-    runs-on: [self-hosted, windows]  # ← point at your Windows self‑hosted runner
+    runs-on: [self-hosted, windows]
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0             # gives Sonar full history for coverage, etc.
+      - uses: actions/checkout@v4
 
       - name: Set up Java 17
         uses: actions/setup-java@v3
@@ -26,12 +20,23 @@ jobs:
           distribution: temurin
           java-version: '17'
 
-      - name: SonarQube Scan
-        uses: SonarSource/sonarqube-scan-action@v4
+      - name: Download SonarScanner for Windows
+        run: |
+          curl.exe -L -o scanner.zip ^
+            https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-7.1.0.4889-windows.zip
+          tar -xf scanner.zip
+
+      - name: Add scanner to PATH
+        run: |
+          echo "%{RUNNER_WORKSPACE}\sonar-scanner-*/bin" >> $env:GITHUB_PATH
+
+      - name: Run SonarScanner
+        run: |
+          sonar-scanner.bat ^
+            -Dsonar.projectKey=your-project-key ^
+            -Dsonar.sources=. ^
+            -Dsonar.host.url=%SONAR_HOST_URL% ^
+            -Dsonar.login=%SONAR_TOKEN%
         env:
+          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}   # http://localhost:9000
           SONAR_TOKEN:    ${{ secrets.SONAR_TOKEN }}
-          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}   # should be http://localhost:9000
-        with:
-          args: >
-            -Dsonar.projectKey=your-project-key
-            -Dsonar.sources=.
