--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -9,21 +9,37 @@ on:
 
 jobs:
   sonarqube:
-    runs-on: [self-hosted, windows]  
+    runs-on: ubuntu-latest
+
+    services:
+      sonarqube:
+        image: sonarqube:9-community
+        ports: ["9000:9000"]
+        options: >-
+          --health-cmd="curl -sSf http://localhost:9000 || exit 1"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=12
+
     steps:
       - uses: actions/checkout@v4
+
       - name: Set up Java 17
         uses: actions/setup-java@v3
         with:
           distribution: temurin
           java-version: '17'
 
-      - name: SonarQube Scan
-        uses: SonarSource/sonarqube-scan-action@v4
-        env:
-          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
-          SONAR_TOKEN:    ${{ secrets.SONAR_TOKEN }}
-        with:
-          args: >
-            -Dsonar.projectKey=your-project-key
-            -Dsonar.sources=.
+      - name: Wait for SonarQube
+        run: |
+          until curl -sSf http://localhost:9000/api/server/version; do
+            sleep 5
+          done
+
+      - name: Run SonarScanner
+        run: |
+          sonar-scanner \
+            -Dsonar.projectKey=your-project-key \
+            -Dsonar.sources=. \
+            -Dsonar.host.url=http://localhost:9000 \
+            -Dsonar.login=${{ secrets.SONAR_TOKEN }}
