--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -16,10 +16,9 @@ jobs:
         image: sonarqube:9-community
         ports: ["9000:9000"]
         options: >-
-          --health-cmd="curl -sSf http://localhost:9000 || exit 1"
+          --health-cmd="exit 0"
           --health-interval=10s
-          --health-timeout=5s
-          --health-retries=12
+          --health-retries=1
 
     steps:
       - uses: actions/checkout@v4
