--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -15,13 +15,10 @@ jobs:
       sonarqube:
         image: sonarqube:9-community
         ports: ["9000:9000"]
-        options: >-
-          --health-cmd="exit 0"
-          --health-interval=10s
-          --health-retries=1
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
       - name: Set up Java 17
         uses: actions/setup-java@v3
@@ -33,21 +30,25 @@ jobs:
         run: |
           curl -sSL \
             https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.8.0.2856-linux.zip \
-            -o scanner.zip
-          unzip scanner.zip -d scanner
+            -o sonar-scanner.zip
+          unzip sonar-scanner.zip -d scanner
           echo "${{ runner.workspace }}/scanner/sonar-scanner-*/bin" >> $GITHUB_PATH
 
-      - name: Wait for SonarQube
+      - name: Wait for SonarQube to be ready
         run: |
-          until curl -sSf http://localhost:9000/api/server/version; do
-            echo "…waiting for SonarQube"
+          for i in {1..30}; do
+            if curl -sSf http://localhost:9000/api/server/version; then
+              echo "SonarQube is up!"
+              break
+            fi
+            echo "Waiting for SonarQube… ($i)"
             sleep 5
           done
 
       - name: Run SonarScanner
         run: |
           sonar-scanner \
-            -Dsonar.projectKey=your-project-key \
+            -Dsonar.projectKey=your‑project‑key \
             -Dsonar.sources=. \
-            -Dsonar.host.url=http://localhost:9000 \
+            -Dsonar.host.url=${{ secrets.SONAR_HOST_URL }}
             -Dsonar.login=${{ secrets.SONAR_TOKEN }}
