--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -34,13 +34,12 @@ jobs:
             sleep 5
           done
 
-      - name: Run SonarQube scan
-        uses: SonarSource/sonarqube-scan-action@v5
-        with:
-          # these args go straight to sonar-scanner
-          args: >
-            -Dsonar.projectKey=your-project-key
-            -Dsonar.sources=.
+      - name: Run SonarScanner
         env:
-          SONAR_HOST_URL: http://localhost:9000
-          SONAR_TOKEN:    ${{ secrets.SONAR_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        run: |
+          sonar-scanner \
+            -Dsonar.projectKey=your‑project‑key \
+            -Dsonar.sources=. \
+            -Dsonar.host.url=http://localhost:9000 \
+            -Dsonar.login=$SONAR_TOKEN
