--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -1,42 +1,30 @@
 name: SonarQube Analysis
 
 on:
-  push:         { branches: [ main ] }
-  pull_request: { branches: [ main ] }
-  workflow_dispatch:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
 jobs:
   sonarqube:
+    name: Analyze with SonarQube
     runs-on: ubuntu-latest
 
-    services:
-      sonarqube:
-        image: sonarqube:9-community
-        ports: ["9000:9000"]
-
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-      - name: Set up Java 17
-        uses: actions/setup-java@v3
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
         with:
-          distribution: temurin
-          java-version: '17'
+          node-version: 18
 
-      - name: Wait for SonarQube
-        run: |
-          until curl -sSf http://localhost:9000/api/server/version; do
-            echo "Waiting for SonarQube…"
-            sleep 5
-          done
+      - name: Install dependencies
+        run: npm install
 
-      - name: Run SonarQube scan
-        uses: SonarSource/sonarqube-scan-action@v5
-        with:
-          args: >
-            -Dsonar.projectKey=github-test-scan
-            -Dsonar.sources=.
-            -Dsonar.login=${{ secrets.SONARQUBE_TOKEN }}
+      - name: SonarQube Scan
+        uses: sonarsource/sonarqube-scan-action@main
         env:
-          SONAR_HOST_URL: http://localhost:9000
-          SONAR_TOKEN:    ${{ secrets.SONARQUBE_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONARQUBE_TOKEN }}
+          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
