--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -29,9 +29,5 @@ jobs:
 
       - name: Run SonarScanner
         shell: cmd 
-        run: |
-          sonar-scanner.bat `
-            -Dsonar.projectKey=SSD-Lab `
-            -Dsonar.sources=. `
-            -Dsonar.host.url=$env:SONAR_HOST_URL `
-            -Dsonar.token=$env:SONAR_TOKEN
+        run: >
+          sonar-scanner.bat -Dsonar.projectKey=SSD-Lab -Dsonar.sources=. -Dsonar.host.url=%SONAR_HOST_URL% -Dsonar.token=%SONAR_TOKEN%
